--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.23.0",
     "ganache-cli": "^6.0.3",
-    "truffle": "4.0.5",
+    "truffle": "^4.1.8",
     "zeppelin-solidity": "^1.4.0"
+  },
+  "dependencies": {
+    "openzeppelin-solidity": "1.9.0"
   }
 }
